# mlxai-2024-team-landrum-song

./: .gitignore  .pre-commit-config.yaml  ClinCluster final presentation 03012.pptx  Dockerfile  README.md  build_and_push_docker.sh  genes.txt  main.nf  nextflow.config  pyproject.toml  requirements.txt
2024-team-landrum-song/: ClinVAR_Categorization.py  KCNQ1.db  LDLR.db  LDLR_classified_conditions_unique.txt  RCV_aggregation.py  SCN5A.db  TSC1.db  USH2A.db  check-duplicate.py  check_duplicate.py  clinvar_unfiltered_disease_name.py  interactive_KCNQ1_clusters.html  interactive_LDLR_clusters.html  interactive_LDLR_clusters_curated.html  interactive_SCN5A_clusters.html  interactive_TSC1_clusters.html  interactive_USH2A_clusters.html  llm_cluster.py  pull_and_extract_clinvar.py  visualize-cluster-interactive.ipynb  visualize-cluster-interactive.py  visualize-cluster.py  wf_wrapper.py
assets/: KCNQ1_clusters_curated.json  KCNQ1_formatted_unique_conditions.json  LDLR_clusters_curated.json  LDLR_formatted_unique_conditions.json  SCN5A.db  SCN5A_clusters_curated.json  SCN5A_formatted_unique_conditions.json  TSC1_clusters_curated.json  TSC1_formatted_unique_conditions.json  USH2A_clusters_curated.json  USH2A_formatted_unique_conditions.json  interactive_KCNQ1_clusters.html  interactive_KCNQ1_clusters_curated.html  interactive_LDLR_clusters.html  interactive_SCN5A_clusters.html  interactive_SCN5A_clusters_curated.html  interactive_TSC1_clusters.html  interactive_TSC1_clusters_curated.html  interactive_USH2A_clusters.html  interactive_USH2A_clusters_curated.html  llm_cluster.py
(+15 files in other folders)
